Fixing issue with share buttons on firefox and IE - part 2

--- a/views/css/modal-1.6.css
+++ b/views/css/modal-1.6.css
@@ -304,7 +304,9 @@
 
 #froggypricenegociator-facebook-share-preload {
 	opacity:0;
+	height: 0px;
 }
 #froggypricenegociator-twitter-share-preload {
 	opacity:0;
+	height: 0px;
 }
