--- a/views/css/modal.css
+++ b/views/css/modal.css
@@ -297,3 +297,11 @@
 	background: rgba(0, 0, 0, 0.25);
 }
 
+#froggypricenegociator-facebook-share-preload {
+	opacity:0;
+	height: 0px;
+}
+#froggypricenegociator-twitter-share-preload {
+	opacity:0;
+	height: 0px;
+}
